# cgal-project

./: .gitignore  README.md
doc/: explanations.odt  report outline.docx  report_draft.docx  shape_matching_emd.blg  shape_matching_emd.dvi  shape_matching_emd.tcp  shape_matching_emd.tex  shape_matching_emd.tps
doc/latex_eqns/: latex_eqns.txt
mds/: README.md  dist.py  matcompare.py
mds/MDSVis/: MDSVis.pde
mds/MDSVis/application.linux32/: MDSVis
mds/MDSVis/application.linux64/: MDSVis
mds/MDSVis/application.macosx/: readme.txt
mds/MDSVis/application.windows64/: MDSVis.bat
mds/results/shapes216/: compare_mat_14d.txt  compare_mat_2d.txt  compare_mat_4d.txt  mds_14d.txt  (+4 more)
scripts/: combine_names_and_points.py  count_points.py  emd_dist_mat.txt  eval.py  flattenize.py  make_db_and_distmat.bat  mds_script.bat  pick_test_set.py
shapes216/: build_mat_log.csv  distmat.csv  emd_dist_mat.csv  emdindex.csv  mds_2d.txt  mds_3d.txt  mds_4d.txt  mds_5d.txt  mds_dist_2d.txt  mds_dist_3d.txt  mds_dist_4d.txt  mds_dist_5d.txt  names_and_points_2d.txt  names_and_points_3d.txt
src/: CMakeLists.txt  db.cpp  db.h  emd.c  emd.c.bkp  emd.cpp  emd.h  emdmatrix.cpp  emdmatrix.h  emdvis.cpp  functions.h  main.cpp  mdsvis.cpp  perftest.cpp  perftest_log.csv  pointset.cpp  pointset.h
test/CannyHarris/: CMakeLists.txt  CannyHarris.cpp
test/emd/: emd.h  example2.c
test/genSign1/: CMakeLists.txt  genSign1.cpp
test/genSign2/: CMakeLists.txt  genSign2.cpp
test/onlyCanny/: CMakeLists.txt  onlyCanny.cpp
test/src2/: CMakeLists.txt  db.cpp  functions.h  main.cpp  pointset.cpp
(+8 files in other folders)
